--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ url: "https://aidanbevan.com"
 # Build settings
 markdown: kramdown
 
+# SASS/SCSS settings
+sass:
+  sass_dir: assets/css
+  style: compressed
+
 # Plugins
 plugins:
   - jekyll-feed
