Enhance SEO and metadata for site and pages
Updated _config.yml with detailed author, location, and SEO fields. Improved _layouts/default.html by adding SEO tags, Open Graph, Twitter Card, and structured data (JSON-LD) for better search engine and social media integration. Added page-specific descriptions to about.md, contact.md, and index.md for improved discoverability and relevance.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,26 @@
 # Site settings
 title: Aidan Bevan
-description: Professional Gymnastics Coach | Movement Without Limits
+description: Certified Junior Gymnastics Coach specializing in early childhood development and inclusive training for young children of all abilities in South Africa.
 baseurl: ""
 url: "https://aidanbevan.com"
+author:
+  name: Aidan Bevan
+  email: aidanbevan09@gmail.com
+
+# Social Media
+social:
+  name: Aidan Bevan
+  links: []
+
+# SEO Settings
+logo: /assets/images/gymnast.png
+locale: en_ZA
+
+# Location
+location:
+  city: Pinetown
+  region: KwaZulu-Natal
+  country: South Africa
 
 # Build settings
 markdown: kramdown
